# personal_approval_tool

./: .env.example  .gitignore  README.md  SECURITY.md  TODO.md  alembic.ini  pyproject.toml
docs/: README.md  api-surface.md  architecture.md  operations.md  permission-model.md  project-scope.md  status.md
examples/: polling_agent.py
migrations/: README  env.py
migrations/versions/: 20260629_0001_initial_schema.py  20260629_0002_agents_registry.py
scripts/: install-user-service.sh
skills/pat-approval/: SKILL.md
skills/pat-approval/scripts/: pat_client.py
src/pat/: __init__.py  app.py  callbacks.py  config.py  database.py  models.py  ollama.py  repository.py
src/pat/static/: app.js  index.html  styles.css
systemd/: pat.service.example
tests/: test_agents.py  test_callbacks.py  test_email_intake.py  test_policies.py  test_repository.py
