[project]
name = "personal-approval-tool"
version = "0.1.0"
description = "P.A.T. - a local human-in-the-loop approval queue for agent workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
